<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/update_info_bg"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center" >
	   	<TextView
	   	    android:layout_width="wrap_content"
	   	    android:layout_height="wrap_content"
	   	    android:layout_marginStart="10dp"
	   	    android:textSize="20sp"
	   	    android:textColor="@color/snow"
	   	    android:text="@string/find_new_version"
			android:layout_marginLeft="10dp" />
      	<TextView
      	    android:id="@+id/version_name_text"
	   	    android:layout_width="wrap_content"
	   	    android:layout_height="wrap_content"
	   	    android:layout_marginStart="10dp"
	   	    android:textSize="20sp"
	   	    android:textColor="@color/snow"
	   	    android:text=""
			android:layout_marginLeft="10dp" />
      	
    </LinearLayout>
    
   	<TextView
   	    android:id="@+id/update_info_text"
   	    android:layout_marginStart="15dp"
 	    android:layout_width="fill_parent"
 	    android:layout_height="120dp"
 	    android:textSize="14sp"
 	    android:textColor="@color/snow"
 	    android:text=""
		android:layout_marginLeft="15dp" />
   	
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:gravity="center" >

	    <Button
	        style="?android:attr/buttonBarButtonStyle"
	        android:id="@+id/cancel_update_button"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:background="@drawable/about_activity_button_selector"
	        android:textSize="13sp"
	        android:text="@string/cancel"/>
	    
	    <Button
	        style="?android:attr/buttonBarButtonStyle"
	        android:id="@+id/update_button"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:background="@drawable/about_activity_button_selector"
	        android:layout_marginStart="3dp"
	        android:textSize="13sp"
	        android:text="@string/update"
			android:layout_marginLeft="3dp" />
	    
	</LinearLayout>     
  	
</LinearLayout>
